--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,18 @@
           "./public/js/app/l2Item/controller.ts",
           "./public/js/app/l2Item/dataservice.ts",
           "./public/js/app/l2Item/main.ts",
+          "./public/js/app/LevelFour/controller.ts",
+          "./public/js/app/LevelFour/dataservice.ts",
+          "./public/js/app/LevelFour/main.ts",
+          "./public/js/app/levelOne/controller.ts",
+          "./public/js/app/levelOne/dataservice.ts",
+          "./public/js/app/levelOne/main.ts",
+          "./public/js/app/levelThree/controller.ts",
+          "./public/js/app/levelThree/dataservice.ts",
+          "./public/js/app/levelThree/main.ts",
+          "./public/js/app/levelTwo/controller.ts",
+          "./public/js/app/levelTwo/dataservice.ts",
+          "./public/js/app/levelTwo/main.ts",
           "./public/js/app/nav/controller.ts",
           "./public/js/app/nav/dataservice.ts",
           "./public/js/app/nav/main.ts",
