--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
+/public/js/app/**.js
+/public/js/app/**.min.js
+/public/js/app/**/**.map.js
+/public/js/app/**/**.js
 
 # Windows shortcuts
 *.lnk
@@ -45,3 +49,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Folders with compiled JS
