--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,9 @@
           "./public/js/typings/modernizr/modernizr.d.ts",
           "./public/js/typings/moment/moment.d.ts",
           "./public/js/typings/q/Q.d.ts",
+          "./public/js/app/applications/controller.ts",
+          "./public/js/app/applications/dataservice.ts",
+          "./public/js/app/applications/main.ts",
           "./public/js/app/database/applications.ts",
           "./public/js/app/database/databaseManager.ts",
           "./public/js/app/database/documents.ts",
@@ -39,6 +42,7 @@
           "./public/js/app/database/metadata.ts",
           "./public/js/app/database/navItems.ts",
           "./public/js/app/database/newsItems.ts",
+          "./public/js/app/database/otherContent.ts",
           "./public/js/app/database/pageAudit.ts",
           "./public/js/app/database/resources.ts",
           "./public/js/app/database/tagFilters.ts",
