--- a/tsconfig.json
+++ b/tsconfig.json
@@ -74,6 +74,9 @@
           "./public/js/app/nav/controller.ts",
           "./public/js/app/nav/dataservice.ts",
           "./public/js/app/nav/main.ts",
+          "./public/js/app/search/controller.ts",
+          "./public/js/app/search/dataservice.ts",
+          "./public/js/app/search/main.ts",
           "./public/js/app/utils.ts",
           "./public/libraries/angular.min.js",
           "./public/libraries/html5shiv-3.7.2.min.js",
